score input texts centered on mobile, fixed to par number spacing

--- a/assets/css/mobilegui.css
+++ b/assets/css/mobilegui.css
@@ -2,10 +2,11 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  font-size: 10px;
   line-height: 40px;
   text-align: center;
-  background: lightblue
+  background: lightblue;
+  text-align:center;
+  margin:auto;
 }
 
 ons-toolbar {
@@ -17,23 +18,25 @@ input.score-input {
     line-height: 1;
     font-family: -apple-system,'Helvetica Neue',Helvetica,Arial,'Lucida Grande',sans-serif;
     -webkit-font-smoothing: antialiased;
-    -webkit-appearance: none;
+    /*-webkit-appearance: none;*/
     border: 0;
     color: #1f1f21;
     font-size: 25px;
     font-weight: 400;
     box-sizing: border-box;
     text-align: center;
-    display: block;
+    display: inline-block;
     margin: 0 auto;
     padding-top: 4px;
+    margin: auto;
+    width: 40px;
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     /* display: none; <- Crashes Chrome on hover */
     -webkit-appearance: none;
-    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+    /*margin: 0; /* <-- Apparently some margin are still there even though it's hidden */*/
 }
 
 /* Conditions Page text inputs */
